--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
     "@nestjs/platform-express": "^6.8.0",
+    "@nestjs/serve-static": "^1.0.1",
+    "fix": "0.0.6",
+    "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "sequelize": "^5.19.7",
+    "sequelize-typescript": "^1.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.1",
@@ -34,6 +40,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
+    "@types/sequelize": "^4.28.6",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
