--- a/package.json
+++ b/package.json
@@ -20,18 +20,32 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.7",
     "@nestjs/common": "^6.8.0",
     "@nestjs/core": "^6.8.0",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^6.8.0",
+    "@nestjs/platform-socket.io": "^6.8.3",
     "@nestjs/serve-static": "^1.0.1",
+    "@nestjs/websockets": "^6.8.3",
+    "@types/passport-jwt": "^3.0.2",
+    "@types/socket.io": "^2.1.4",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.2",
     "fix": "0.0.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
     "sequelize": "^5.19.7",
-    "sequelize-typescript": "^1.0.0"
+    "sequelize-typescript": "^1.0.0",
+    "websockets": "^0.2.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.1",
@@ -40,6 +54,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.8",
+    "@types/passport-local": "^1.0.33",
     "@types/sequelize": "^4.28.6",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
