--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/websockets": "^6.8.3",
     "@types/passport-jwt": "^3.0.2",
     "@types/socket.io": "^2.1.4",
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.2",
